<resources>
    <string name="app_name" translatable="false">Langamy</string>
    <string name="result">Result</string>
    <string name="dictation_result">Result: %1$s/%2$s</string>
    <string name="click_button_to_add_image">Click + button to add image</string>


    <string name="commit_study_set">Commit study set</string>
    <string name="title_activity_study_sets">StudySetsActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Profile</string>
    <string name="title_profile">Profile</string>
    <string name="create_study_set">Create set</string>
    <string name="study_sets">Study sets</string>
    <string name="study_set_details">Study set details</string>
    <string name="profile">Profile</string>
    <string name="amount">Amount of terms</string>
    <string name="can_not_translate">Can\'t translate this word</string>
    <string name="action_settings">Settings</string>
    <string name="toolbar_title">Contacts</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Type name…</string>
    <string name="no_internet_connection">No internet connection</string>

    <string name="account_title_text">Account</string>
    <string name="google_title_text">Google sign in</string>
    <string name="sign_out">Sign Out</string>
    <string name="synchronize">Synchronize</string>

    <string name="error_sign_in_failed">Sign in failed, see logs for details.</string>
    <string name="title">Title</string>
    <string name="scan_document">Scan document</string>
    <string name="amount_of_words">Amount of words: %1$s</string>
    <string name="enable_auto_translate">Enable auto translate</string>

    <string name="translate_words">Translate words</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="study_set_search_placeholder">Enter study set name</string>
    <string name="term">Term</string>
    <string name="speak">Speak</string>
    <string name="translation">Translation</string>
    <string name="speechtotext">speak</string>
    <string name="listen">listen</string>
    <string name="translation_nterm">Translation - \nTerm</string>
    <string name="term_ntranslation">Term - \n Translation</string>
    <string name="quiz_n_test">Quiz test</string>
    <string name="question_count">Question amount</string>
    <string name="creator">Creator</string>
    <string name="my_dictations">My dictations</string>
    <string name="dictation_code">Dictation code: %1$s</string>
    <string name="do_you_want_to_delete">Do you want to delete?</string>
    <string name="start_dictation">Start dictation</string>
    <string name="name">Name</string>
    <string name="type_of_questions">Type of questions</string>
    <string name="show_marks">Show marks</string>
    <string name="update_marks">Update marks</string>
    <string name="code">Code:</string>
    <string name="submit_words">Submit words</string>
    <string name="review_cards">Review cards</string>
    <string name="cards">Cards</string>
    <string name="learn">Learn</string>
    <string name="quiz">Quiz</string>
    <string name="correct_answer">Correct answer:</string>
    <string name="continue_text">Continue</string>
    <string name="i_am_right">I am right</string>
    <string name="study_all">Study all</string>
    <string name="study_marked">Study marked</string>
    <string name="dictation_doesn_t_exist">Dictation doesn\'t exist</string>
    <string name="skip">Skip</string>
    <string name="title_is_empty">Title is empty</string>
    <string name="min_words_in_studyset">Study set must include 4 or more words</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="dictation">Dictation</string>
    <string name="fancy_create_studyset">Let\'s create your first studyset</string>
    <string name="fancy_done_dictations">There you can find last 20 dictations, which you have completed</string>
    <string name="fancy_my_dictations">There will be stored all your dictations</string>
    <string name="fancy_random_dictations">Challenge yourself and pass random dictation</string>
    <string name="fancy_help_btn">You can find help button on each page</string>
    <string name="fancy_title">Firstly set a title</string>
    <string name="fancy_from_lang">Choose language from translate</string>
    <string name="fancy_to_lang">Choose language to translate</string>
    <string name="fancy_scan_btn">Scan document from camera or gallery</string>
    <string name="fancy_make_dictation_btn">You can create dictations for anybody and check their marks</string>
    <string name="fancy_edit">To edit your studyset press this btn in actionbar</string>
    <string name="fancy_star">Press on a star to mark a word</string>
    <string name="fancy_study_marked">Then you can learn only marked words</string>
    <string name="fancy_question_count">Set amount of questions</string>
    <string name="fancy_timer">Set time limit for answering (only for quiz)</string>
    <string name="fancy_types_of_questions">Choose type of questions for dictation</string>
    <string name="fancy_quiz">Ask translation with 4 answer options</string>
    <string name="fancy_term">Show term and ask translation</string>
    <string name="fancy_translation">Show translation and ask term</string>
    <string name="fancy_mark_dication_word">Mark dictation word and it will be in dictation 100% \n All dictations are randomly mixed</string>
    <string name="can_not_listen">Can not listen</string>
    <string name="can_not_speak">Can not speak</string>
    <string name="nice">Nice !</string>
    <string name="wrong">Wrong</string>
    <string name="you_need_an_internet_connection">You need an internet connection</string>
    <string name="abilities_in_offline_mode">You can only learn created studysets in offline mode</string>
    <string name="add_study_set_to_dictation">You can add words from many studysets to one dictation</string>
    <string name="scan_greeting">Scan picture with unknown words and create studyset</string>
    <string name="learn_greeting">Learn words in 5 ways:</string>
    <string name="submit">Submit</string>
    <string name="you_don_t_have_any_dictations">You don\'t have any dictations</string>
    <string name="create_studyset">Create first \n studyset</string>
    <string name="add_timer">Add timer</string>
    <string name="add_timer_dictation_mode">You are able to add timer only in quiz</string>
    <string name="your_dictations">Your dictations</string>
    <string name="recent_dictations">Recent dictations</string>
    <string name="you_have_not_passed_any_dictation">You have not passed any dictation.\nPress on roll dice and complete random one</string>
    <string name="code_must_be_numeric">Code must be numeric</string>
    <string name="say_this_word_in">Say this word</string>
    <string name="connectivity_error">Connectivity error: %1$s\nMaybe the Internet is turned off</string>
    <string name="nice_job">Nice job!</string>
    <string name="carry_on">Carry on!</string>
    <string name="do_not_stop">Do not stop!</string>
    <string name="learn_more_words">Learn more words!</string>
    <string name="you_are_improving_yourself">You are improving yourself!</string>
    <string name="retake_dictation">Retake\n dictation</string>
    <string name="login">Login</string>
    <string name="continue_with_google">Continue with Google</string>

</resources>