<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    >

    <ImageButton
        android:id="@+id/voiceBtn"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@null"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_mic" />

    <TextView
        android:id="@+id/translation_TV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/voiceBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/translation"
        android:textColor="@color/darkColor"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/translationHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/translation_TV"
        android:layout_centerHorizontal="true"
        android:letterSpacing="0.3"
        android:text="@string/say_this_word_in"
        android:textColor="@color/darkColor" />

    <Button
        android:id="@+id/cannot_speak_BTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/translationHint"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/green"
        android:onClick="skipSpeechStage"
        android:text="@string/can_not_speak"
        android:textSize="12sp" />
</RelativeLayout>
