<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/alert_head_RL"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/red">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:background="@null"
            android:src="@drawable/sad_emoji" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/wrong"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/alert_head_RL"
        android:padding="20dp">

        <LinearLayout
            android:id="@+id/correct_answer_LL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/correct_answer"
                android:textColor="@color/lightGreen"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/correct_answer_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/correct_answer"
                android:textColor="@color/darkColor"
                android:textSize="25sp" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/continue_learning_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/correct_answer_LL"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:background="@null"
            android:src="@drawable/ic_arrow_forward_blue_24dp" />

        <TextView
            android:id="@+id/im_right_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/correct_answer_LL"
            android:textSize="18sp"
            android:paddingTop="10dp"
            android:textColor="@color/lightGreen"
            android:text="@string/i_am_right" />
    </RelativeLayout>
</RelativeLayout>