<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/specific_dictation_RL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:padding="10dp">

            <include layout="@layout/custom_progress_bar" />

            <RelativeLayout
                android:id="@+id/error_RL"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                tools:visibility="visible">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:gravity="center"
                    android:text="@string/dictation_doesn_t_exist"
                    android:textColor="@color/blue"
                    android:textSize="30sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/specific_dictation_VIEW"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:animateLayoutChanges="true">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/start_dictation_btn"
                    style="@style/WhiteButtonWithBlueBorder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="20dp"
                    android:text="@string/start_dictation"
                    android:textSize="17sp" />

                <RelativeLayout
                    android:id="@+id/dictation_code_RL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/start_dictation_btn"
                    android:layout_marginBottom="10dp"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/dictation_code_TV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="10dp"
                        android:text="@string/code"
                        android:textColor="@color/darkColor"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/dictation_code"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/dictation_code_TV"
                        android:backgroundTint="@color/darkColor"
                        android:ems="10"
                        android:textColor="@color/blue"
                        android:textIsSelectable="true"
                        android:textSize="17sp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/dictation_name_RL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/type_of_question_RL"
                    android:layout_marginBottom="10dp"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/dictation_name_TV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="10dp"
                        android:text="@string/name"
                        android:textColor="@color/darkColor"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/dictation_name"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/dictation_name_TV"
                        android:backgroundTint="@color/darkColor"
                        android:ems="10" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/dictation_setting_LL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/dictation_code_RL"
                    android:layout_marginBottom="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/question_count_hint_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginEnd="10dp"
                        android:text="@string/question_count"
                        android:textColor="@color/darkColor"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/question_amount_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_toEndOf="@+id/question_count_hint_tv"
                        android:textColor="@color/blue"
                        android:textSize="17sp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/creator_RL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/dictation_name_RL"
                    android:layout_marginBottom="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/creator_hint_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginEnd="10dp"
                        android:text="@string/creator"
                        android:textColor="@color/darkColor"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/creator_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_toEndOf="@+id/creator_hint_tv"
                        android:textColor="@color/grey_500"
                        android:textSize="17sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/type_of_question_RL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/dictation_setting_LL"
                    android:layout_marginBottom="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/type_of_question_hint_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginEnd="10dp"
                        android:text="@string/type_of_questions"
                        android:textColor="@color/darkColor"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/type_of_question_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_toEndOf="@+id/type_of_question_hint_tv"
                        android:textColor="@color/blue"
                        android:textSize="17sp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/show_marks_RL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/creator_RL"
                    android:padding="5dp">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/show_marks_BTN"
                        style="@style/WhiteButtonWithBlueBorder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/show_marks">

                    </com.google.android.material.button.MaterialButton>

                    <ImageButton
                        android:id="@+id/update_marks_BTN"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:background="@null"
                        android:padding="10dp"
                        android:src="@drawable/ic_refresh_white"
                        app:tint="@color/green">

                    </ImageButton>
                </RelativeLayout>


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/dictation_marks_RV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/show_marks_RL"
                    android:layout_marginBottom="40dp"
                    android:visibility="gone"
                    tools:visibility="visible" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/words_recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/dictation_marks_RV" />
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
